--- a/site/assignment_module3/index.html
+++ b/site/assignment_module3/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 	<header>
-		<nav id="main-nav" class="navbar navbar-expand-sm navbar-light bg-custom">
+		<nav id="main-nav" class="navbar navbar-expand-md navbar-light bg-custom">
 			<a class="navbar-brand" href="#">Food, LLC</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#foodChoices" aria-controls="foodChoices" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="foodChoices">
-				<ul class="navbar-nav mr-auto d-block d-sm-none">
+				<ul class="navbar-nav mr-auto d-block d-md-none">
 					<li class="nav-item">
 						<a class="nav-link" href="#chicken">Chicken</a>
 					</li>
